# sparql-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  install.sh  server.json  sparql-mcp.toml
.claude/skills/: kb-workbench
.github/workflows/: ci.yml  release.yml
crates/sparql-mcp-core/: Cargo.toml
crates/sparql-mcp-core/src/: config.rs  install.rs  lib.rs  main.rs  model.rs  xdg.rs
crates/sparql-mcp-core/src/application/: mod.rs
crates/sparql-mcp-core/src/application/tools/: cbm.rs  doc.rs  export.rs  gdrive.rs  mod.rs  ontology.rs  project.rs  recording.rs  sparql.rs
crates/sparql-mcp-core/src/cbm/: db.rs  mod.rs  model.rs  turtle.rs
crates/sparql-mcp-core/src/domain/: doc_store.rs  mod.rs  sparql_store.rs
crates/sparql-mcp-core/src/infrastructure/: fs_doc_store.rs  mod.rs  oxigraph.rs
crates/sparql-mcp-core/src/mcp/: client.rs  importer.rs  mod.rs  recording.rs  server.rs
crates/sparql-mcp-core/src/plugin/: mod.rs
crates/sparql-mcp-core/tests/: cbm_pipeline.rs  mcp_handshake.rs  store.rs  tools_project.rs  tools_sparql.rs
docs/: getting-started.md
docs/superpowers/plans/: 2026-04-28-gdrive-sync.md
docs/superpowers/specs/: 2026-04-28-gdrive-sync-design.md
examples/hello-plugin/: Cargo.toml  SKILL.md
examples/hello-plugin/src/: lib.rs
ontology/: 1-smc.ttl
plugins/.claude-plugin/: marketplace.json
plugins/kb-workbench/: README.md
plugins/kb-workbench/.claude-plugin/: plugin.json
plugins/kb-workbench/skills/kb-workbench/: SKILL.md
(+21 files in other folders)
