[package]
name = "hello-plugin"
version = "0.1.0"
edition = "2021"
description = "Minimal example: extend sparql-mcp with a custom MCP tool via ToolPlugin."
license = "MIT"
publish = false

[lib]
name = "hello_plugin"
path = "src/lib.rs"

[dependencies]
sparql-mcp = { path = "../../crates/sparql-mcp-core" }
rmcp = { version = "1.5", default-features = false, features = ["server", "macros"] }
serde_json = "1"
